// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render 1`] = `
<DocumentFragment>
  <label
    class="Toggle__Wrapper-sc-6s3wfu-0 kIsRpT"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-1 utRNX"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-3 fCjUWZ"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render always on 1`] = `
<DocumentFragment>
  <label
    class="Toggle__Wrapper-sc-6s3wfu-0 kIsRpT"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-1 utRNX"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-3 fnHdfL"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render disabled 1`] = `
<DocumentFragment>
  <label
    class="Toggle__Wrapper-sc-6s3wfu-0 crAizE"
    disabled=""
  >
    <input
      class="Toggle__Input-sc-6s3wfu-1 utRNX"
      disabled=""
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-3 jCMKNe"
        disabled=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render small 1`] = `
<DocumentFragment>
  <label
    class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-1 utRNX"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-2 giHppe"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-3 fitNOJ"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="Toggle__Wrapper-sc-6s3wfu-0 kIsRpT"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-1 utRNX"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-3 fCjUWZ"
      />
    </div>
  </label>
</DocumentFragment>
`;
